syntax = "proto3";

package server;

import "Work.proto";

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetWorkResponseProto";

message GetWorkResponse {
    work.Work work = 1;
}