syntax = "proto3";

package server;

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetWorkRequestProto";

message GetWorkRequest {
    string workKey = 1;
    string deviceKey = 2;
}
